<resources>
    <string name="app_name">Kamus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="desk_logo">gambar logo</string>
    <string name="_kosong" />
    <string name="first_run">first run</string>
    <string name="ento_in">English to Indonesia</string>
    <string name="into_en">Indonesia ke Inggris</string>
    <string name="find_word">Find a Word</string>
    <string name="find_word2">Temukan Kosakata</string>
    <string name="english_indonesia">English - Indonesia</string>
    <string name="indonesia_english">Indonesia - English</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="describe_here">Describe here</string>
    <string name="a_word">a Word</string>
</resources>
