<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/engtoin"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/english_indonesia" />
        <item
            android:id="@+id/intoeng"
            android:icon="@drawable/ic_language_blue_24dp"
            android:title="@string/indonesia_english" />
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
